--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,7 +20,7 @@
             "args": [
                 "-cp",
                 "out/src",
-                "y2020.day15.Part1"
+                "y2020.day15.Solver"
             ],
             "problemMatcher": []
         }
