--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,9 +7,7 @@
             "label": "Compile",
             "type": "shell",
             "command": "jabuto",
-            "args": [
-                "build"
-            ],
+            "args": ["build", "-v"],
             "problemMatcher": []
         },
         {
@@ -17,11 +15,7 @@
             "dependsOn": "Compile",
             "type": "shell",
             "command": "java",
-            "args": [
-                "-cp",
-                "out/src",
-                "Runner"
-            ],
+            "args": ["-cp", "out/src", "Runner"],
             "problemMatcher": []
         }
     ]
