--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "java.format.comments.enabled": false
+    "java.format.comments.enabled": false,
+    "java.project.sourcePaths": [
+        "src"
+    ],
 }
