--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,14 +13,26 @@
             "problemMatcher": []
         },
         {
-            "label": "Run",
+            "label": "Run 2018",
             "dependsOn": "Compile",
             "type": "shell",
             "command": "java",
             "args": [
                 "-cp",
                 "out/src",
-                "Runner"
+                "Runner2018"
+            ],
+            "problemMatcher": []
+        },
+        {
+            "label": "Run 2020",
+            "dependsOn": "Compile",
+            "type": "shell",
+            "command": "java",
+            "args": [
+                "-cp",
+                "out/src",
+                "Runner2020"
             ],
             "problemMatcher": []
         }
