--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -35,6 +35,7 @@
         },
         {
             "label": "Watch 2018",
+            "dependsOn": "Compile",
             "type": "shell",
             "command": "nodemon",
             "args": [
@@ -47,6 +48,7 @@
         },
         {
             "label": "Run 2019",
+            "dependsOn": "Compile",
             "type": "shell",
             "command": "mvn",
             "args": [
@@ -69,6 +71,7 @@
         },
         {
             "label": "Run 2020",
+            "dependsOn": "Compile",
             "type": "shell",
             "command": "mvn",
             "args": [
