--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.7.4</version>
+    </dependency>
   </dependencies>
 
   <build>
