--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.11.2</version>
       <scope>test</scope>
     </dependency>
 
@@ -49,7 +49,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <version>3.2.5</version>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
@@ -71,6 +71,17 @@
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.liquibase</groupId>
+          <artifactId>liquibase-maven-plugin</artifactId>
+          <version>4.29.2</version>
+          <configuration>
+            <changeLogFile>changelog.sql</changeLogFile>
+            <url>jdbc:postgresql://localhost:5432/postgres</url>
+            <username>postgres</username>
+            <password>postgres</password>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
