--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -66,7 +66,7 @@
             "dependsOn": "Compile",
             "type": "shell",
             "command": "mvn",
-            "args": ["test", "-Dtest=aoc.y2023.day2.Part1Test"],
+            "args": ["test", "-Dtest=aoc.y2023.day2.**"],
             "problemMatcher": []
         },
         {
